docker-compose/k8s/escluster/elasticsearch-service.yml
---
kind: Service
apiVersion: v1
metadata:
  namespace: elastic
  name: es-svc
  labels:
    app: elasticsearch
    role: es
spec:
  selector:
    app: elasticsearch
    role: es
  clusterIP: None
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
